# restaurant-v2

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/admin/: .env.example  README.md  package.json  tailwind.config.js
apps/backend/: .env.example  README.md  download_coffee_images.py  package.json  pyproject.toml  requirements.txt
apps/backend/app/: __main__.py  main.py  seed.py
apps/backend/app/api/v1/: __init__.py
apps/backend/app/api/v1/admin/: __init__.py  analytics.py  menu_management.py  orders_management.py
apps/backend/app/api/v1/auth/: __init__.py  auth.py
apps/backend/app/api/v1/customer/: __init__.py  orders.py  reviews.py  rewards.py
apps/backend/app/api/v1/public/: __init__.py  menu.py
apps/backend/app/core/: auth.py  config.py  database.py  exceptions.py  middleware.py
apps/backend/app/schemas/: __init__.py  base.py  coffee.py  order.py  payment.py  review.py  rewards.py  user.py
apps/backend/prisma/: schema.prisma
apps/backend/prisma/migrations/20250701133324_init/: migration.sql
apps/landing/: README.md  index.html  package.json
apps/landing/src/: App.tsx
apps/landing/src/components/: CTAButtons.tsx  CoffeeCard.tsx  OnboardingSlide.tsx  SlideIndicators.tsx
apps/web/: README.md  package.json
apps/web/src/: App.tsx  index.css
docs/coffee-shop/: ADMIN_FEATURES.md  COFFEE_SHOP_API.md  COFFEE_SHOP_DATABASE.md  DOCKER_DATABASE_SETUP.md  FEATURES.md  IMPLEMENTATION_GUIDE.md  PROJECT_OVERVIEW.md
scripts/: db-reset.sh  db-start.sh  db-stop.sh
(+19 files in other folders)
